--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ android.useAndroidX=true
 # Scheme: year.<version>
 projectVersion=2021.5
 # Current stable version to be used in this project
-infraVersion=2021.5
+infraVersion=dsvtrml
 avito.build=local
 avito.git.state=local
 # Without it failed on studio sync when ci=true. It happens because studio makes eager configuration of each register task.
