--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ android.useAndroidX=true
 # Scheme: year.<version>
 projectVersion=2021.5
 # Current stable version to be used in this project
-infraVersion=dsvtrml
+infraVersion=2021.4
 avito.build=local
 avito.git.state=local
 # Without it failed on studio sync when ci=true. It happens because studio makes eager configuration of each register task.
@@ -25,7 +25,7 @@ avito.build-verdict.enabled=false
 # Disable console output https://github.com/autonomousapps/dependency-analysis-android-gradle-plugin/issues/202
 systemProp.dependency.analysis.silent=true
 # Versions
-systemProp.kotlinVersion=1.4.21
+systemProp.kotlinVersion=1.4.30
 systemProp.detektVersion=1.15.0
 systemProp.androidGradlePluginVersion=4.1.2
 # Mandatory properties in root project for insturmentation plugin TODO remove all of them
