--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@ org.gradle.unsafe.configuration-cache-problems=fail
 android.useAndroidX=true
 # The next version of all artifacts
 # Scheme: year.<version>
-projectVersion=2021.6
+systemProp.projectVersion=2021.6
 # Current stable version to be used in this project
 systemProp.infraVersion=2021.5
 avito.build=local
