--- a/subprojects/gradle.properties
+++ b/subprojects/gradle.properties
@@ -22,7 +22,7 @@ org.gradle.unsafe.configuration-cache=false
 org.gradle.unsafe.configuration-cache-problems=warn
 # The next version of all artifacts
 # Scheme: year.<version>
-projectVersion=2021.32
+projectVersion=2021.32-agp7
 # Current stable version. It is used in this project
 systemProp.infraVersion=2021.31
 avito.build=local
